# MyResumo

./: .dockerignore  .env.example  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  build.sh  docker-compose.yml  index.html  mkdocs.yml  myresumo-prd.md  package-lock.json  package.json  pyproject.toml  release.config.js  render.yaml  requirements.txt  sitemap.xml  streamlit_app.py  test.json  test.py
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  ci_cd_update.md  dependency_update.md  documentation_update.md  enhancement.md  feature_request.md  refactor.md
.github/workflows/: doc.yml  documentation.yml  linter.yml  publish-ghcr.yml  python-app.yml  release.yml
Backend/: Dockerfile  requirements.txt
Helper/: generate.py  resume.py  sections.py  toast_message.py  tools.py  vision.py
Test/: api_request.ipynb
Tests/: html_to_pdf.ipynb  octo_ai.ipynb  vision.ipynb
Utils/: bing.txt  keywords.txt  mixtral.txt  prompt.txt  test.txt
ai_integration/: index.html
app/: __init__.py  main.py  next.py
business_logic/: index.html
contributing/: index.html
data/: example.json
doc/: setup.md
docs/: Doxyfile  ai_integration.md  business_logic.md  contributing.md  index.md  overview.md
helper/: cloud_storage.py  generate.py  html_pdf.py  openai_utils.py  resume.py  toast_message.py  tools.py
overview/: index.html
scripts/: lint.sh  setup_dev.sh
search/: search_index.json
setup/: index.html
template/: index.html
tests/: html_to_pdf.ipynb  octo_ai.ipynb  open_ai.ipynb
(+178 files in other folders)
